--- a/games/amazing-rope-police-main/index.html
+++ b/games/amazing-rope-police-main/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+      <script data-consolejs-channel="86754ed0-e8a9-32bc-5736-68b3681e226d" src="https://remotejs.com/agent/agent.js"></script>
 <head>
 <title>Amazing Strange Rope Police Unblcoked Games 76</title>
 <link rel="stylesheet" href="crazygames-gameframe-v1.bundle.css" />
