--- a/games/tube-jumpers/index.html
+++ b/games/tube-jumpers/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script data-consolejs-channel="86754ed0-e8a9-32bc-5736-68b3681e226d" src="https://remotejs.com/agent/agent.js"></script>
   <head>
     <title>Tube Jumpers | 3kh0</title>
     <link rel="icon" type="image/x-icon" href="img/icon.jpg" />
